Revert "Delete Math.Round() for Integer variables and inefficient new Integer, Double constructor; used valueOf() instead"
This reverts commit 94d0c9b669d0f046189bf03abd11afbb3e5a81ce.